<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvTitolAddJugador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/titol_add_jugador"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll0"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/swEquipLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equip_local_new_jug"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEquipVisitant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equip_visitant_new_jug"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNumJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_jugador"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNumJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNomJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_jugador_new"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etNomJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/rgPosicio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10sp">

            <RadioButton
                android:id="@+id/rbEsLibero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/libero"
                android:text="@string/esLibero"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbEsCentral"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/central"
                android:text="@string/esCentral"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbAltre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/altres"
                android:text="@string/esAltre"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>